<resources>
    <string name="app_name">NotesNuageuses</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="select_folder">Select folder</string>
    <string name="select_file">Select file</string>

    <string name="base_handler_retrieve_folder_problem"> %1$s - couldn\'t retrieve folder details. Try again later. %2$s</string>
    <string name="app_root_folder_name">App folder</string>
    <string name="empty_folder">Empty folder - trashed files: %1$d</string>

    <!-- menu - home -->
    <string name="action_settings">Settings</string>
    <string name="action_about">About</string>
    <string name="action_legal_notices">Legal Notices</string>
    <string name="action_connect_to_google_drive">Connect</string>
    <string name="action_disconnect_from_google_drive">Disconnect</string>
    <string name="action_resend_file">Resend file</string>
    <string name="action_show_root_folder">Show root</string>

    <string name="menu_quick_photo">Take quick photo</string>
    <string name="menu_refresh">Refresh</string>
    <string name="menu_create_file">Create</string>
    <string name="menu_show_trashed_files">Show trashed files (%1$d)</string>
    <string name="menu_hide_trashed_files">Hide trashed files (%1$d)</string>
    <string name="menu_show_folder_details">Folder details</string>

    <!-- create_dialog -->
    <string name="title_activity_create_dialog">CreateDialogActivity</string>
    <string name="create_dialog_header">Create</string>
    <string name="create_dialog_folder">Folder</string>
    <string name="create_dialog_photo">Photo</string>
    <string name="create_dialog_text">Text note</string>
    <string name="create_dialog_cancel">Cancel</string>

    <!-- DownloadFragment -->
    <string name="retrieving_folder_title">Retrieving folder</string>
    <string name="retrieving_folder_file">Retrieving (%1$s) data in progress</string>
    <string name="file_not_uploaded_yet">File not uploaded yet - try again later</string>

    <!-- FolderArrayAdapter -->
    <string name="folder_array_adapter_updated">Updated</string>
    <string name="title_activity_test_google_drive_connection">TestGoogleDriveConnectionActivity</string>

    <!-- text fragment menu items -->
    <string name="menu_save_file">Save file</string>

    <string name="retrieving_folder_title_key">retrievingFolderTitleKey</string>
    <string name="retrieving_folder_default_title">not defined</string>

    <string name="base_handler_create_folder_no_connection">Couldn\'t create folder: %1$s - no connection to Google Drive. Try again later.</string>
    <string name="base_handler_create_folder_problems">Couldn\'t create folder: %1$s. Try again later.</string>


    <string name="base_handler_encrypted_text_file_extension">.pntxt</string>
    <string name="base_handler_plain_photo_file_extension">.png</string>
    <string name="base_handler_encrypted_photo_file_extension">.pnpng</string>
    <string name="base_handler_could_not_decrypt_file">%1$s - couldn\'t decrypt file - check your password."</string>
    <string name="base_handler_could_not_encrypt_file">Couldn\'t encrypt file: %1$s."</string>

    <string name="base_handler_upload_time_details">\'%1$s\' uploaded in %2$4.3f secs. Encrypt time: %3$4.3f secs.</string>
    <string name="base_handler_upload_problem_will_try_later">Couldn\'t upload file: %1$s. Will try again later.</string>
    <string name="base_handler_upload_problem">Couldn\'t upload file: %1$s. </string>
    <string name="base_handler_download_problem">%1$s - download unsuccessful - try again later.</string>
    <string name="base_handler_download_no_connection">%1$s - couldn\'t download file - no connection to Google Drive. Try again later.</string>
    <string name="base_handler_download_time_details">\'%1$s\' downloaded in %2$4.3f secs. Decrypt time: %3$4.3f secs.</string>
    <string name="home_app_file_encrypting">%1$sencrypting</string>
    <string name="home_app_file_uploading">%1$suploading</string>
    <string name="file_upload_starts">Starting file upload</string>
    <string name="file_upload_problems">Upload problem</string>
    <string name="file_download_starts">Starting file download</string>
    <string name="retrieving_file_folder">" folder"</string>
    <string name="retrieving_file_file">" file"</string>

    <!-- fragment_file_detail -->
    <string name="file_detail_header">File details</string>
    <string name="file_detail_open">Open</string>
    <string name="file_detail_rename">Rename</string>
    <string name="file_detail_trash">Remove</string>
    <string name="file_detail_delete">Delete</string>
    <string name="file_detail_untrash">Restore</string>
    <string name="file_detail_kind">Kind</string>
    <string name="file_detail_location">Location</string>
    <string name="file_detail_created">Created</string>
    <string name="file_detail_updated">Updated</string>
    <string name="file_detail_trashed_files_cnt">Trashed files</string>
    <string name="title_activity_text_note">TextNoteActivity</string>

    <!-- rename_file_dialog -->
    <string name="rename_file_cancel_text">Cancel</string>
    <string name="rename_file_ok_text">OK</string>
    <string name="rename_file_folder">Rename folder</string>
    <string name="rename_file_file">Rename file</string>
    <string name="rename_file_header">Enter new name</string>

    <!-- fragment_rename_file_dialog -->
    <string name="rename_dialog_file_name">Enter file name</string>
    <string name="rename_dialog_file_required">File name can not be empty</string>

    <!-- test only -->
    <string name="file_detail_kind_tst_text">Text</string>
    <string name="file_detail_location_tst_text">Folder</string>
    <string name="file_detail_created_tst_text">Oct. 1, 2014</string>
    <string name="file_detail_updated_tst_text">Oct. 10, 2014</string>
    <string name="file_detail_trash_info">Trashed files</string>

    <string name="base_handler_rename_connection_problem">Could not rename file: %1$s - no connection to Google Drive. Try again later.</string>
    <string name="file_delete_connection_problem">Could not delete file: %1$s - no connection to Google Drive. Try again later.</string>
    <string name="base_handler_rename_problem">Could not rename file: %1$s. Try again later.</string>
    <string name="file_delete_problem">Could not delete file: %1$s. Try again later.</string>
    <string name="file_type_folder">Folder</string>
    <string name="file_type_file">Text</string>
    <string name="file_was_deleted">File was deleted</string>
    <string name="file_is_trashed">File trashed: %1$b</string>
    <string name="title_activity_new_test">NewTestActivity</string>
    <string name="drive_access_problem">Problems with access to Google Drive - try again</string>

</resources>
