<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
      android:id="@+id/locationDialogRootViewId"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:orientation="vertical"
      android:background="@android:color/white"
      android:gravity="center_horizontal">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:background="@android:color/white">


        <RelativeLayout
            android:id="@+id/fileDetailOpenLayoutId"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_weight="1" >
            <ImageView
                android:id="@+id/fileDetailOpenImageId"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:src="@mipmap/ic_open_in_new_black_48dp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="25dp"
                android:layout_marginBottom="5dp"/>
            <TextView
                android:id="@+id/fileDetailOpenId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/file_detail_open"
                android:textColor="@android:color/black"
                android:layout_below="@id/fileDetailOpenImageId"
                android:layout_centerHorizontal="true"/>
        </RelativeLayout>

        <Space
            android:layout_width="10dp"
            android:layout_height="36dp"/>

        <RelativeLayout
            android:id="@+id/fileDetailRenameUntrashLayoutId"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_weight="1" >
            <ImageView
                android:id="@+id/fileDetailRenameUntrashImageId"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:src="@mipmap/ic_edit_black_48dp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="25dp"
                android:layout_marginBottom="5dp"/>
            <TextView
                android:id="@+id/fileDetailRenameUntrashId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/file_detail_rename"
                android:textColor="@android:color/black"
                android:layout_below="@id/fileDetailRenameUntrashImageId"
                android:layout_centerHorizontal="true" />
        </RelativeLayout>

        <Space
            android:layout_width="10dp"
            android:layout_height="36dp"/>

        <RelativeLayout
            android:id="@+id/fileDetailTrashDeleteLayoutId"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_weight="1" >
            <ImageView
                android:id="@+id/fileDetailTrashDeleteImageId"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:src="@mipmap/ic_delete_black_48dp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="25dp"
                android:layout_marginBottom="5dp"/>
            <TextView
                android:id="@+id/fileDetailTrashDeleteId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/file_detail_trash"
                android:textColor="@android:color/black"
                android:layout_below="@id/fileDetailTrashDeleteImageId"
                android:layout_centerHorizontal="true" />
        </RelativeLayout>

    </LinearLayout>

    <View android:layout_height="2dip" android:layout_width="match_parent" android:background="#FF909090"/>

    <ScrollView
        android:scrollbars="vertical"
        android:id="@+id/helpSelectedTopicRootViewId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="30dp">
        <!--android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        -->


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/fileDetailLocationHeaderId"
                android:layout_alignParentTop="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_width="wrap_content"
                android:layout_height="36dp"
                android:gravity="center_vertical"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:text="@string/file_detail_location"
                android:textColor="@android:color/black" />

            <TextView
                android:id="@+id/fileDetailLocationDataId"
                android:layout_toRightOf="@+id/fileDetailLocationHeaderId"
                android:layout_toEndOf="@+id/fileDetailLocationHeaderId"
                android:layout_width="wrap_content"
                android:layout_height="36dp"
                android:gravity="center_vertical|start|left"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:text="@string/file_detail_location_tst_text"
                android:textColor="@android:color/black" />

            <Space android:id="@+id/sep0Id" android:layout_below="@+id/fileDetailLocationHeaderId" android:layout_height="1dip" android:layout_width="match_parent" android:background="#FF909090"/>

            <TextView
                android:id="@+id/fileDetailKindHeaderId"
                android:layout_below="@+id/sep0Id"
                android:layout_width="wrap_content"
                android:layout_height="36dp"
                android:gravity="center_vertical"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:text="@string/file_detail_kind"
                android:textColor="@android:color/black" />

            <TextView
                android:id="@+id/fileDetailKindDataId"
                android:layout_below="@+id/sep0Id"
                android:layout_toRightOf="@+id/fileDetailLocationHeaderId"
                android:layout_toEndOf="@+id/fileDetailLocationHeaderId"
                android:layout_width="wrap_content"
                android:layout_height="36dp"
                android:gravity="center_vertical|start|left"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:text="@string/file_detail_kind_tst_text"
                android:textColor="@android:color/black" />

            <Space android:id="@+id/sep1Id" android:layout_below="@+id/fileDetailKindHeaderId" android:layout_height="1dip" android:layout_width="match_parent" android:background="#FF909090"/>

            <TextView
                android:id="@+id/fileDetailCreatedHeaderId"
                android:layout_below="@+id/sep1Id"
                android:layout_width="wrap_content"
                android:layout_height="36dp"
                android:gravity="center_vertical"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:text="@string/file_detail_created"
                android:textColor="@android:color/black" />

            <TextView
                android:id="@+id/fileDetailCreatedDataId"
                android:layout_below="@+id/sep1Id"
                android:layout_toRightOf="@+id/fileDetailLocationHeaderId"
                android:layout_toEndOf="@+id/fileDetailLocationHeaderId"
                android:layout_width="wrap_content"
                android:layout_height="36dp"
                android:gravity="center_vertical|start|left"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:text="@string/file_detail_created_tst_text"
                android:textColor="@android:color/black" />

            <Space android:id="@+id/sep2Id" android:layout_below="@+id/fileDetailCreatedHeaderId" android:layout_height="1dip" android:layout_width="match_parent" android:background="#FF909090"/>

            <TextView
                android:id="@+id/fileDetailUpdatedHeaderId"
                android:layout_below="@+id/sep2Id"
                android:layout_width="wrap_content"
                android:layout_height="36dp"
                android:gravity="center_vertical"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:text="@string/file_detail_updated"
                android:textColor="@android:color/black" />

            <TextView
                android:id="@+id/fileDetailUpdatedDataId"
                android:layout_below="@+id/sep2Id"
                android:layout_toRightOf="@+id/fileDetailLocationHeaderId"
                android:layout_toEndOf="@+id/fileDetailLocationHeaderId"
                android:layout_width="wrap_content"
                android:layout_height="36dp"
                android:gravity="center_vertical|start|left"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:text="@string/file_detail_updated_tst_text"
                android:textColor="@android:color/black" />

        </RelativeLayout>

    </ScrollView>

</LinearLayout>

<!--


 -->